--- a/templates/profiles/login.html.twig
+++ b/templates/profiles/login.html.twig
@@ -55,7 +55,7 @@
                     <div >
                       <input type="submit" class="w3-button w3-theme w3-margin-top" value="Log In"></input>
                         <br>
-                      <a href="" class="w3-text-theme w3-right" >Forget Password?</a>
+                      <a href="{{ path ('reset-password')}}" class="w3-text-theme w3-right" >Forget Password?</a>
                     </div>
                   </form>
                 <!-- End Login Form -->
