--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -68,7 +68,7 @@
 
 
 {# !!!!!!!!!!!!!!!!!! #}
-        {# <a href="/{{ app.user ? 'logout' : 'login' }}" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white  w3-right" title="My Profile"> {{ app.user ? 'Logout' : 'Log/Sign'}} </a> #}
+        {# <a href="/{{ app.user ? 'logout' : 'login' }}" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white  w3-right" title="My Profile"> {{ app.user ? 'Logoutw' : 'Log/Sign'}} </a> #}
 {# !!!!!!!!!!!!!!!!!! #}
 
 
