--- a/templates/profiles/login.html.twig
+++ b/templates/profiles/login.html.twig
@@ -28,7 +28,7 @@
                 <form action="" method="POST">
                     <!-- Input:Username -->
                     <div class="w3-padding">
-                      <label for="formInput#text">Username: </label>
+                      <label for="formInput#text">Email: </label>
                       <input
                         id="formInput#text"
                         type="text"
